--- a/CSS/solution.css
+++ b/CSS/solution.css
@@ -29,7 +29,6 @@ img {
   border-radius: 4%;
 }
 
-
 /* Header Styling */
 
 header {
@@ -228,27 +227,31 @@ footer {
 @media (max-width: 1100px) {
   body {
     margin-inline: 0;
+    padding-inline: 1.5rem;
+    text-align: center;
   }
-  
+
   #nav-list {
     gap: 1rem;
+    align-items: center;
+    line-height: 1.25rem;
   }
-  
+
   nav a {
     padding-inline: 0;
   }
-  
+
   img {
     max-width: 100%;
     height: auto;
   }
-  
+
   [aria-labelledby="youre-the-solution"] {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-  
+
   header,
   section#steps,
   footer {
