--- a/CSS/volunteer.css
+++ b/CSS/volunteer.css
@@ -129,10 +129,14 @@ footer {
 @media (max-width: 1100px) {
   body {
     margin-inline: 0;
+    padding-inline: 1.5rem;
+    line-height: 1.25rem;
+    text-align: center;
   }
 
   #nav-list {
     gap: 1rem;
+    align-items: center;
   }
 
   nav a {
